--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ p::first-letter{
     margin-right: 50px;
     background-color: rgb(228, 231, 230);
     padding: 20px;
-    height: 600px;
+    height: 500px;
     margin-bottom: 30px;
 }
 /*column specs. for velo boxes*/
@@ -29,7 +29,8 @@ p::first-letter{
     background-color:white;
        height: 400px;
        margin-top: 60px;
-       padding: 40px;
+       padding: 30px;
+       padding-top: 0px;
 }
 .column1{
     background-color:white;
@@ -55,11 +56,12 @@ h1{
 }
 /*velohouse main heading text*/
 #velotext{
-    text-decoration-line: underline;
     font-family: Tahoma;
-    font-size: 25px;
-    text-align: left;
-
+    text-align: center;
+}
+#velotext::first-letter{
+    font-size: 40px;
+    color:  #650e0e;
 }
 /*velohouse-emc1-text-column*/
 .velo1 .emc1{  
@@ -75,8 +77,8 @@ h1{
 }
 .column3{
     background-color:white;
-       height: 410px;
-       margin-top: 110px;
+       height: 480px;
+       margin-top: 80px;
        padding: 25px;
 }
 .emc-row{
@@ -85,11 +87,9 @@ h1{
 }
 /*emc-fimi-main-heading*/
 .emc-text{
-    text-align: right;
-    text-decoration-line: underline;
+    text-align: center;
     font-family: Tahoma;
     font-size: 25px;
-    margin-right: 50px;
 }
 /*hypercafe-main heading*/
 .hypercafe-text{
@@ -99,11 +99,11 @@ h1{
        text-decoration-line: underline;
 }
 /*ta-sats-text-column*/
-.fimi{
+.column4{
     background-color:white;
     margin-top: 100px;
     padding: 30px;
-    height: 270px;
+    height: 365px;
 }
 /*fimi-row*/
 .fimi-row{
@@ -111,24 +111,26 @@ h1{
 }
 /*for ta-sats-main-text*/
 .ta-sats-text{
-    text-align: left;
-    text-decoration-line: underline;
+    text-align: center;
     font-family: Tahoma;
-    font-size: 25px;
-    position: relative;
+}
+.ta-sats-text::first-letter{
+    font-size: 40px;
+    color:  #650e0e;
 }
 /*for fimi-text*/
-.fimi-text{
+.fimi-content{
     text-align: left;
     height: 300px;
 }
 /*for fimi-main-text*/
-h2{
-    text-align:right;
-    text-decoration-line: underline;
+.fimi-text{
+    text-align:center;
     font-family: Tahoma;
-    font-size: 25px;
-    margin-right: 200px;
+}
+.fimi-text::first-letter{
+    font-size: 40px;
+    color:  #650e0e;
 }
 /*fimi1-Fimi--text-column*/
 .fimi1{
@@ -137,10 +139,9 @@ h2{
     padding: 30px;
 }
 /*column4  for fimi boxes*/
-.column4{
+.column5{
     background-color:white;
-       height: 350px;
-       padding: 30px;
+       height: 400px;
        text-align: center;
        margin-bottom: 80px;
 }
