--- a/css/style.css
+++ b/css/style.css
@@ -1,47 +1,48 @@
+/*Shweta*/
 /*text-marking for all*/
 .container{
     height: 700;
+    margin-top: 60px;
 }
 /*text-marking for all*/
 mark{
     background-color: lightgrey;
 }
 /*for all text line spacing*/
-div p{
+.container div p{
     line-height: normal;
 }
 /*for all p first letter highlight*/
-p::first-letter{
+.container p::first-letter{
     font-size: 25px;
     color: #363434;
 }
+/*for all p text spacing aborted*/
+.container p{
+    text-align:justify; 
+    text-justify: inter-word;
+}
 /*main-----velohouse*/
-.row{
+.velo-row{
     margin-left: 50px;
     margin-right: 50px;
     background-color: rgb(228, 231, 230);
     padding: 20px;
     height: 500px;
-    margin-bottom: 30px;
 }
 /*column specs. for velo boxes*/
 .column{
     background-color:white;
        height: 400px;
        margin-top: 60px;
-       padding: 30px;
+
        padding-top: 0px;
+       text-align: center;
 }
 .column1{
     background-color:white;
        height: 375px;
        padding: 20px;
-}
-/*heading*/
-h1{
-    font-family:Arial Black;
-    margin-left: 50px;
-    text-shadow: -1px 0 rgb(66, 3, 3), 0 1px rgb(70, 5, 5), 1px 0 rgb(73, 4, 4), 0 -1px rgb(61, 3, 3);
 }
 .image-size{
     width: 450px;
@@ -59,7 +60,7 @@ h1{
     font-family: Tahoma;
     text-align: center;
 }
-#velotext::first-letter{
+ .container #velotext::first-letter{
     font-size: 40px;
     color:  #650e0e;
 }
@@ -73,7 +74,12 @@ h1{
     background-color:white;
        height: 480px;
        padding: 30px;
-       text-align: center;
+       
+}
+.emc-row{
+    background-color: rgb(228, 231, 230);
+    height: 650px;
+    padding: 40px;
 }
 .column3{
     background-color:white;
@@ -81,10 +87,7 @@ h1{
        margin-top: 80px;
        padding: 25px;
 }
-.emc-row{
-    background-color: rgb(228, 231, 230);
-    height: 650px;
-}
+
 /*emc-fimi-main-heading*/
 .emc-text{
     text-align: center;
@@ -107,12 +110,15 @@ h1{
 }
 /*fimi-row*/
 .fimi-row{
-    height:550px ;
+    height:550px;
+    background-color: rgb(228, 231, 230);
+    padding: 40px;
 }
 /*for ta-sats-main-text*/
 .ta-sats-text{
     text-align: center;
     font-family: Tahoma;
+    text-align:justify; 
 }
 .ta-sats-text::first-letter{
     font-size: 40px;
@@ -128,7 +134,7 @@ h1{
     text-align:center;
     font-family: Tahoma;
 }
-.fimi-text::first-letter{
+.container .fimi-text::first-letter{
     font-size: 40px;
     color:  #650e0e;
 }
@@ -145,6 +151,97 @@ h1{
        text-align: center;
        margin-bottom: 80px;
 }
+/*Garima*/
+/*header-logo*/
+#top-links{
+    background-color: #650e0e;
+    text-align: center;
+    height: 40px;
+    padding-top: 1%;
+    display:inline-block;
+    width: 100%;
+  }
+#top-links a{
+    color: #fff !important;
+    margin-left: 20px;
+}
+.navbar {
+    height: 150px;
+}
+#nav-main-links{
+background-color: #e0e0e0;
+}
+#nav-main-links a{
+    color: #650e0e;
+}
+.navbar-default {
+    border: none!important;
+    border-color:"";
+}
+#nav-main-links ul{
+        list-style: none;
+        margin: 0;
+        padding-left: 15px;
+        padding-top: 10px;
+        width:68%;
+        display: inline-block;
+        text-align: center;
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-pack: distribute;
+      }
+#nav-main-links ul >li{
+        justify-content: space-around;
+    }
+
+/*Carousal*/
+.carousel {
+    height: 500px;
+}
+.carousel .item {
+    width: 100%;
+    height: 500px;
+    background-color: #777;
+}
+.carousel-inner > .item > img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-width: 100%;
+    height: 500px;
+}
+.carousel-caption {
+    bottom: 50px !important;
+}
+.carousel-caption h2 {
+   margin-top: 20px;
+    font-family: cursive;
+    color:#86af14;
+}
+
+
+/*Responsive*/
+@media screen and (max-width: 640px) {
+    .navbar-brand {
+       max-width: 100%;
+       flex: 100%;
+    }
+}
+@media screen and (max-width: 640px) {
+    #music, #cycle, #people {
+       max-width: 100%;
+        font-size: 5px;
+    }
+}
+
+@media (min-width: 768px) {
+    .carousel-caption p {
+        margin-bottom: 20px;
+        font-size: 21px;
+        line-height: 1.4;
+    }
+}
+
 
 
 @media (min-width: 768px) and (max-width: 1024px){
@@ -175,5 +272,80 @@ h1{
        height: 470px;
     }
 }
+/*Pratibha*/
+#news-letter {
+    margin: 0 auto;
+    position: relative;
+    min-width: 300px;
+    width: 480px;
+ }
+ #news-letter div {
+    color: #650e0e;
+    text-align: center;
+ }
+ #news-letter span {
+    color: grey;
+ }
+ #news-letter button {
+    background-color:#383737;
+    border: none;
+    color: #fff;
+    font-size: 13px;
+ }
+ hr.news-letter {
+    height: 6px;
+    border: 0;
+    box-shadow: 0 6px 6px -6px #8c8b8b inset;
+ }
+ /*.row.vdivide [class*='col-']:not(:last-child):after {*/
+ .vdivide :not(:last-child):after{
+    background: #e0e0e0;
+    width: 2px;
+    content: "";
+    display: block;
+    position: absolute;
+    top: -15px;
+    bottom: 0;
+    right: 0;
+    min-height: 55px;
+ }
+.figure i{
+    color: #650e0e;
+    padding-left: 25px;
+ }
+ #footer a:not(:last-child):after{
+    content: ' | ';
+ }
+ #footer a{
+    text-decoration: none;
+ }
+ #footer nav {
+    margin: 0;
+    text-align: center
+ }
+ #footer .panel-body {
+    margin: 0 auto;
+    padding-top: 20px;
+    border: none;
+ }
+ #footer .panel-footer {
+    background-color: #650e0e;
+    color: #fff;
+ }
 
+ .panel{
+    margin-bottom: 0px;
+    background-color: #b6b5b5!important;
+ }
+ #footer {
+    min-height: 150px;
+    height: 175px;
+    text-align: center;
+    margin-top: 80px;
+ }
+ #footer ul, a {
+    list-style: none;
+    color: #650e0e !important;
+    font-weight: bold;
+ }
 
