jquery added and hover effects

--- a/css/style.css
+++ b/css/style.css
@@ -30,12 +30,39 @@ mark{
     padding: 20px;
     height: 500px;
 }
+/*hover image*/
+#velo1{
+    width: 500px;
+    display: none;
+    margin-right: 100px;
+}
+
+.overlay {
+    position: absolute; 
+    bottom: 0; 
+    background: rgb(145, 57, 57);
+    background: rgba(146, 64, 64, 0.5); /* Black see-through */
+    color: #f1f1f1; 
+    width: 450px;
+    transition: .5s ease;
+    opacity:0;
+    color: white;
+    font-size: 20px;
+    padding: 2px;
+    text-align: center;
+    margin-left:42px;
+  }
+  .fa-bicycle{
+      color: rgb(179, 224, 14);
+  }
+  .velo:hover .overlay{
+    opacity: 1;
+  }
 /*column specs. for velo boxes*/
 .column{
     background-color:white;
        height: 400px;
        margin-top: 60px;
-
        padding-top: 0px;
        text-align: center;
 }
@@ -45,7 +72,11 @@ mark{
        padding: 20px;
 }
 .image-size{
+    position: relative;
     width: 450px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     box-shadow: 0px 10px 5px 0px #888888; 
 }
 /*velohouse/emc/fimi-text-box*/
@@ -86,6 +117,10 @@ mark{
        height: 480px;
        margin-top: 80px;
        padding: 25px;
+}
+.image-size:hover {
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
 }
 
 /*emc-fimi-main-heading*/
