--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ mark{
     display: none;
     margin-right: 100px;
 }
-
+/*overlay message*/
 .overlay {
     position: absolute; 
     bottom: 0; 
@@ -118,6 +118,7 @@ mark{
        margin-top: 80px;
        padding: 25px;
 }
+/*image-flip*/
 .image-size:hover {
     -webkit-transform: scaleX(-1);
     transform: scaleX(-1);
@@ -228,6 +229,16 @@ background-color: #e0e0e0;
 #nav-main-links ul >li{
         justify-content: space-around;
     }
+    /*-----TOOLTIP--------*/
+   .tooltip {
+       background-color: aqua;
+       opacity: 0;
+       transition: opacity 1s;
+   }
+   .tooltip title {
+       visibility: hidden;
+       background-color: aqua;
+   }
 
 /*Carousal*/
 .carousel {
@@ -245,40 +256,39 @@ background-color: #e0e0e0;
     min-width: 100%;
     height: 500px;
 }
-.carousel-caption {
+div .carousel-caption {
     bottom: 50px !important;
+    right: 20%;
+    left: 20%;
+    padding-bottom: 80%;
 }
-.carousel-caption h2 {
-   margin-top: 20px;
+div .carousel-caption {
+    font-size: 50px;
+   margin-top: 50px;
     font-family: cursive;
-    color:#86af14;
-}
+    color: darkblue !important;
+    text-shadow: 3px 3px rgb(221, 255, 127) !important;
+ }
+
+/*Responsive garima
+    @media screen and (min-width: 768px) {
+        #fig-veloe, #fig-emc, #fig-space, #fig-fimi{
+            font-size:  50%;
+            margin-left: 0px;
+        }
+        #nav-main-links ul{
+            width: 100%;
+        }
+        div .carousel-caption {
+            font-size: 25px;
+        }
+        #Carousel {
+            margin-top: 250px;
+        }
+ }*/
 
 
-/*Responsive*/
-@media screen and (max-width: 640px) {
-    .navbar-brand {
-       max-width: 100%;
-       flex: 100%;
-    }
-}
-@media screen and (max-width: 640px) {
-    #music, #cycle, #people {
-       max-width: 100%;
-        font-size: 5px;
-    }
-}
-
-@media (min-width: 768px) {
-    .carousel-caption p {
-        margin-bottom: 20px;
-        font-size: 21px;
-        line-height: 1.4;
-    }
-}
-
-
-
+/*Responsive shweta*/
 @media (min-width: 768px) and (max-width: 1024px){
 
     .column{
@@ -306,6 +316,39 @@ background-color: #e0e0e0;
     .fimi-content{
        height: 470px;
     }
+    .ta-sats-text{
+        text-align: left;
+        text-align:justify; 
+    }
+    /*hover image*/
+#velo1{
+    width: 100%;
+    display: none;
+    margin-right: 50px;
+}
+/*overlay message*/
+.overlay {
+    position: absolute; 
+    bottom: 0; 
+    background: rgb(145, 57, 57);
+    background: rgba(146, 64, 64, 0.5); /* Black see-through */
+    color: #f1f1f1; 
+    width: 320px;
+    transition: .5s ease;
+    opacity:0;
+    color: white;
+    font-size: 20px;
+    padding: 2px;
+    text-align: center;
+    margin-left:0px;
+  }
+  .velo:hover .overlay{
+    opacity: 1;
+  }
+  .image-size:hover {
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+}
 }
 /*Pratibha*/
 #news-letter {
