--- a/css/style.css
+++ b/css/style.css
@@ -256,13 +256,13 @@ background-color: #e0e0e0;
     min-width: 100%;
     height: 500px;
 }
-div .carousel-caption {
+ .carousel-caption {
     bottom: 50px !important;
     right: 20%;
     left: 20%;
     padding-bottom: 80%;
 }
-div .carousel-caption {
+ .carousel-caption {
     font-size: 50px;
    margin-top: 50px;
     font-family: cursive;
